--- a/FindTheTime/war/WEB-INF/web.xml
+++ b/FindTheTime/war/WEB-INF/web.xml
@@ -17,6 +17,24 @@
   </servlet-mapping>
   
   <servlet>
+		<servlet-name>joinGroup</servlet-name>
+		<servlet-class>ee461l.JoinGroupServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>joinGroup</servlet-name>
+		<url-pattern>/joinGroup</url-pattern>
+	</servlet-mapping>
+  
+  <servlet>
+		<servlet-name>createGroup</servlet-name>
+		<servlet-class>ee461l.CreateGroupServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>createGroup</servlet-name>
+		<url-pattern>/createGroup</url-pattern>
+	</servlet-mapping>
+  
+  <servlet>
 		<servlet-name>createAccount</servlet-name>
 		<servlet-class>ee461l.CreateAccountServlet</servlet-class>
 	</servlet>
