--- a/FindTheTime/.classpath
+++ b/FindTheTime/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/KellyA/Desktop/selenium-java-2.44.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/KellyA/Desktop/appengine-testing-1.6.1.1.jar" sourcepath=""/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
